tests/baselines/reference/mergeWithImportedType.errors.txt
f2.ts(1,9): error TS2440: Import declaration conflicts with local declaration of 'E'.


==== f1.ts (0 errors) ====
    export enum E {X}
    
==== f2.ts (1 errors) ====
    import {E} from "./f1";
            ~
!!! error TS2440: Import declaration conflicts with local declaration of 'E'.
    export type E = E;